--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node src/app.js",
     "test": "jest"
@@ -18,7 +19,7 @@
     "mongoose": "^7.3.2"
   },
   "devDependencies": {
-    "jest": "^29.6.1",
+    "jest": "^29.7.0",
     "supertest": "^6.3.3"
   }
 }
